--- a/app/src/main/res/layout/activity_metas.xml
+++ b/app/src/main/res/layout/activity_metas.xml
@@ -4,14 +4,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F5F5F5"
-    android:padding="16dp">
+
+    >
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
+        >
+    <RelativeLayout
+        android:id="@+id/rlHeaderRegistrar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/purpura"
+        android:padding="15dp">
 
+        <ImageView
+            android:id="@+id/imvVolver"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:src="@drawable/volver"
+            android:contentDescription="volver"
+            android:layout_alignParentStart="true"
+            android:clickable="true"
+            android:focusable="true"
+            android:layout_centerVertical="true"
+            />
+
+        <TextView
+            android:id="@+id/lbltituloSeccionRegistrar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/imvVolver"
+            android:layout_marginStart="16pt"
+            android:text="@string/lbl_header_metas"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="8pt"
+
+            />
+
+    </RelativeLayout>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -19,13 +53,16 @@
             card_view:cardCornerRadius="16dp"
             card_view:cardElevation="6dp"
             android:background="@android:color/white"
-            android:layout_marginTop="40dp">
+            android:layout_marginTop="40dp"
+            android:layout_marginHorizontal="16dp"
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:padding="16dp">
+                android:padding="16dp"
+              >
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -52,10 +89,11 @@
                         android:textSize="16sp" />
 
                     <TextView
+                        android:id="@+id/lbldistanciarecorrida"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="200dp"
-                        android:text="0 / 50 km"
+                        android:text="0/50 km"
                         android:textColor="#555555"
                         android:textSize="16sp"
 
@@ -97,7 +135,8 @@
             card_view:cardCornerRadius="16dp"
             card_view:cardElevation="6dp"
             android:background="@android:color/white"
-            android:layout_marginTop="30dp">
+            android:layout_marginTop="30dp"
+            android:layout_marginHorizontal="16dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -134,7 +173,7 @@
                     android:gravity="center"
                     android:inputType="number"
 
-                    />
+                 />
 
                 <Button
                     android:id="@+id/btnGuardar"
@@ -142,7 +181,7 @@
                     android:layout_height="wrap_content"
                     android:text="GUARDAR META"
                     android:textStyle="bold"
-                    android:backgroundTint="#9333ea"
+                    android:backgroundTint="@color/purpura"
                     android:textColor="@android:color/white"
                     android:layout_marginTop="16dp"
                     android:contentDescription="Botón para guardar la meta"
