--- a/app/src/main/res/drawable/background_estadisticas.xml
+++ b/app/src/main/res/drawable/background_estadisticas.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid
-        android:color="#80FFFFFF"/>
+        android:color="#45b56e"/>
 
     <stroke
-        android:color="#80FFFFFF"/>
+        android:color="#45b56e"/>
 
     <corners android:radius="20dp"/>
 
