--- a/app/src/main/res/layout/activity_historial.xml
+++ b/app/src/main/res/layout/activity_historial.xml
@@ -44,6 +44,7 @@
             android:layout_marginRight="10dp">
 
             <TextView
+                android:id="@+id/lblCantEntrenamientos"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="8"
@@ -73,6 +74,7 @@
             android:layout_marginRight="10dp">
 
             <TextView
+                android:id="@+id/lblKmTotales"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="8"
@@ -82,7 +84,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Entrenamientos"
+                android:text="Km Totales"
                 android:textColor="@color/white" />
 
         </LinearLayout>
@@ -100,6 +102,7 @@
             android:gravity="center">
 
             <TextView
+                android:id="@+id/lblRitmoPromedio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="8"
@@ -109,7 +112,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Entrenamientos"
+                android:text="Min/km promedio"
                 android:textColor="@color/white" />
 
 
@@ -122,12 +125,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/rlHeaderHistorial"
-        android:layout_marginTop="20dp">
+        android:layout_marginVertical="20dp">
 
         <ListView
             android:id="@+id/lstHistorialEntrenamientos"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="25sp"
+            android:dividerHeight="15dp"
+            android:divider="@color/fondo"/>
 
     </RelativeLayout>
 
